--- a/alabaster/css/alabaster.css
+++ b/alabaster/css/alabaster.css
@@ -79,6 +79,7 @@ div.sphinxsidebar {
 div.sphinxsidebarwrapper {
     padding: 18px 10px;
     position: fixed;
+    left: 5em;
 }
 
 div.sphinxsidebarwrapper p.logo {
@@ -184,7 +185,7 @@ div.body h5,
 div.body h6 {
     font-family: 'Garamond', 'Georgia', serif;
     font-weight: normal;
-    margin: 30px 0px 10px 0px;
+    margin: 10px 0px 10px 0px;
     padding: 0;
 }
 
@@ -207,7 +208,20 @@ a.headerlink:hover {
 }
 
 div.body p, div.body dd, div.body li {
-    line-height: 1.4em;
+    line-height: 1.2em;
+}
+
+p {
+    display: block;
+    margin-block-start: 0.3em;
+    margin-block-end: 0.3em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
+td:before{
+    content:"• ";
+    color:#000000;
 }
 
 div.admonition {
