--- a/alabaster/css/alabaster.css
+++ b/alabaster/css/alabaster.css
@@ -510,7 +510,7 @@ a:hover tt, a:hover code {
         width: 102.5%;
         margin: 50px -30px -20px -30px;
         padding: 10px 20px;
-        background: #333;
+        background: #FFF;
         color: #FFF;
     }
 
